@@ -31,6 +31,11 @@ by a '#' or a '*' or a '?'. A
 # "Fit to window magnification" and "Fit with to window magnification" --
   currently works best with "Automatic resizing" turned off.
   
+? "Fit to window magnification" and "Fit with to window magnification" with
+  "Automatic resizing" turned on sometime miss rescaling, especially when
+  changing the orientation or resizing the window. You can force
+  rescaling by selecting the active "special" scale in the scales menu.
+
 # Arbitrary scales are now possible - input them in the gv options dialog.
 
 %%%%%%%%%%%%%%%%%%% GV 3.6.4  (June 2008) %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
